# lamper

./: Cargo.toml
patch/libpulse-simple-binding-2.27.1/: .cargo_vcs_info.json  Cargo.toml
patch/libpulse-simple-binding-2.27.1/src/: lib.rs
src/: audproc.rs  colproc.rs  lib.rs  main.rs  udp.rs
